# data_analysis

PBI/logistic/: .gitignore  README.md  logistic_view.pbix
PBI/logistic/data/: incom2024_delay_example_dataset.7z
PBI/logistic/data/geojson/: asia.json  europa.json  north_america.json  sudamerica.json
clustering_products_blinkit/: blinkit.ipynb
eda_top_games_google_play/: app.py
etl-falabella-playa/: README.md  main.py  pyproject.toml
etl-falabella-playa/data/output/analysis/: duplicated_products_family.md  products_family_analysis.md
etl-falabella-playa/notebooks/: data_cleaning.ipynb  data_scraper.ipynb
etl-falabella-playa/src/enrichment_ia/: enrichment_data.py
etl-falabella-playa/src/extract/: scraper_falabella.py  scraper_sagafalabella.py
etl-falabella-playa/src/load/: load_csv.py
etl-sagafalabella-playa/: README.md  pyproject.toml
etl-sagafalabella-playa/data/raw/: products_details.csv  products_list.csv
etl-sagafalabella-playa/data/transformed/cleaning/: deduplicated_products.csv
etl-sagafalabella-playa/data/transformed/duplicates/: duplicated_products.csv
etl-sagafalabella-playa/notebooks/: data_analysis.ipynb
etl-sagafalabella-playa/src/transform/: transform_scrape_data.py
etl-sagafalabella-playa/src/utils/: logger.py  user_agents.txt
scraping_bvl/: .gitignore  requirements.txt  scraping_bvl.ipynb
visualization_ipd_peru/: README.md  st_ipdData.pbix
visualization_ipd_peru/docs/: data_dictionary.md
visualization_ipd_peru/notebooks/: data_cleaning.ipynb
(+1 files in other folders)
