[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falabella_verano"
version = "0.1.0"
description = "Proyecto ETL para análisis de datos de Falabella Verano"
authors = [
    {name = "Anthony Villazana", email = "antguivy@gmail.com"}
]
dependencies = [
    "pandas",
    "pandas-stubs",
    "requests",
    "types-requests",
    "beautifulsoup4",
    "selenium",
    "matplotlib",
    "seaborn",
    "openai",
    "python-dotenv",
    "google-genai"
]

[tool.setuptools]
packages = {find = {where = [""]}}
package-dir = {"src" = "src"}